--- a/Capitulo4/Ejercicios.org
+++ b/Capitulo4/Ejercicios.org
@@ -127,4 +127,4 @@
       #+RESULTS:
       : Primera parte Segunda parte. :)
 
-  15) 
+/Los demas ejercicios se encuentran en su respectivo archivo EjercicioN.java/
